  [924428] ET bit mismatch between CR0 and MSW
  [869822] a real SVGA implementation by m_suzu
  [867045] fix for compiler errors on VC++ by m_suzu
  [838601] support for the over 2GB disk size with MSVC++
  [874816] local ARP/ping/DHCP simulator by m_suzu
  [976066] Keyboard: Get controller version by Ben Lunt
  [832330] ROMBIOS improvement (reduce stack consumption, etc.)
  [977900] READ_CDROM_TOC and base address from Ben Lunt

- SF patches partially applied
  [896733] Lazy flags, for more instructions, only 1 src op
 [1005422] Improve mouse cursol Grub when 2 buttons-mouse use (WIN32)
           (TODO: improved japanese keyboard support)

- patches applied
  - patch.rombios.markevich (Start/Stop Wait Timer) (Kory Markevich)

- these S.F. bugs were closed
  #651510 bximage won't create larger than 2GB
  #759206 bximage fails on Win32 for hd images over 2Gb
  #759210 Bochs fails on image files over 2Gb on Win32
  #799785 bximage doesn't work
  #903345 Problem compiling harddrv.cc
  #933303 Bochs cannot lseek() HD images > 2GB on W32 platforms
  #888438 bximage crashes...(hacked fix included)
  #871720 bximage 2GB file size limit
  #930368 Can't create big hard drives (>2 GB)
  #912496 IDIV can cause simulator divide error
  #522111 Host os SIGILL, booting grub from hd
 #1005052 DMA Controller Model Problem
  #552939 Bochs window doesn't resize when win311
  #989478 I-Cache and undefined Instructions
  #661008 make install fails
  #845691 Workaround: Ne2k and Windows 2000 not working
  #923662 BIOS diskette motor countdown byte broken
  #848141 VGA problems running Scitech Display Driver on Win95
  #799370 Problem booting ReactOS 0.1.3
  #670143 No rule to make config.h
  #653444 with vbe/lgpl bios, scrn updates broken
  #655696 quickstart broken?
  #659350 FDC
  #620853 Ne2000 ethernet card *NOT* supported
  #607611 Numlock
  #543476 Sound card does not work in Windows 95
  #529554 unsupported VBE features DISPI update
  #487316 Access violation on Win32